--- a/miniproj1/style.css
+++ b/miniproj1/style.css
@@ -2,22 +2,38 @@
 body {
 	background: #e8e8e8;
 }
+* {
+    box-sizing: border-box;
+}
 
-.initialbox {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  min-height: 100vh;
+body {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	min-height: 100vh;
 }
 
 .firstline {
 	display: inline-block;
+	padding: 20px;
+	background: black;
+	width: 500px;
 }
 .secondline {
 	flex-direction: row;
+	
+	padding: 0px 20px 20px 20px;
+	width: 500px;
+
+	background: black;
 }
+
+input[type="text"] {
+	width: 300px;
+}
+
 
 .logo {
 	
@@ -35,4 +51,21 @@ body {
 	width:300px;
 	height:100px;
 	vertical-align: top;
+}
+
+ul {
+	width: 500px;
+	list-style: none;
+	padding-left: 0;
+	text-align: left;
+}
+
+ul li {
+    cursor: pointer;
+    position: relative;
+    padding: 12px 8px 12px 40px;
+    background: skyblue;
+    margin: 5px;
+    font-size: 18px;
+    transition: 0.2s;
 }
