--- a/miniproj1/front.css
+++ b/miniproj1/front.css
@@ -25,7 +25,7 @@ ul li {
 }
 
 ul li:hover {
-	background: #ddd;
+	background: #696969;
 	border: 1px solid white;
 }
 
@@ -95,5 +95,5 @@ input {
 }
 
 .addBtn:hover {
-	background-color: #ddd;
+	background-color: #696969;
 }
