--- a/miniproj1/style.css
+++ b/miniproj1/style.css
@@ -81,13 +81,33 @@ ul li:hover {
   background: #ddd;
 }
 
-button {
-	border:0;
-	margin:0;
-	float:right;
+.close {
+	position: absolute;
+    right: 0;
+    top: 0;
+    padding: 12px 16px 12px 16px;
+
+    cursor: pointer;
 }
 
-button .clicked {
-  background-color: black;
-  color: white;
+
+/* When clicked on, add a background color and strike out text */
+ul li.checked {
+    background: #888;
+    color: #fff;
+    text-decoration: line-through;
+}
+
+/* Add a "checked" mark when clicked on */
+ul li.checked::before {
+    content: '';
+    position: absolute;
+    border-color: #fff;
+    border-style: solid;
+    border-width: 0 2px 2px 0;
+    top: 10px;
+    left: 16px;
+    transform: rotate(45deg);
+    height: 15px;
+    width: 7px;
 }
