--- a/sprint-3/views/index.hbs
+++ b/sprint-3/views/index.hbs
@@ -14,6 +14,13 @@
 				</div>
 
 				<div class="col-9">
+					<form action="/new" method="POST" style="margin-bottom: 20px">
+						<input type="text" placeholder="Name" name="author_name">
+						<input type="text" placeholder="Handle" name="author_handle">
+						<input type="text" placeholder="Text" name="text">
+						<button type="submit">Post (refresh page to see chirp)</button>
+					</form>
+
 					{{#each chirps}}
 						<div class="card">
 							<div class="card-body">
@@ -29,6 +36,7 @@
 							</div>
 						</div>
 					{{/each}}
+
 				</div>
 
 			</div>
